
Package org.springframework.beans
* ConstructorArgumentValues holds generic ValueHolders in a List instead of a Set now, keeping their definition order
* ConstructorArgumentValues offers "get(Generic)ArgumentValue" variant that excludes already used ValueHolders
* AbstractAutowireCapableBeanFactory applies generic constructor argument values of the same type in definition order

Package org.springframework.web
* WebContentGenerator sets "no-store" value for "Cache-Control" header too, to prevent caching on FireFox


Changes in version 1.2 RC2 (18.4.2005)
--------------------------------------

Package org.springframework.aop
* added "targetName" property to ProxyFactoryBean, as alternative to target name at the end of "interceptorNames" array
* changed RegexpMethodPointcutAdvisor to use JdkRegexpMethodPointcut by default on JDK 1.4+, unless "perl5" is specified

Package org.springframework.beans
* BeanUtils' "isSimpleProperty" considers primitive wrapper types (Boolean, Integer, etc) as "simple" types too
* BeanWrapperImpl registers a default CustomBooleanEditor for primitive boolean fields (accepting various flag values)
* added CharacterEditor, registered as default editor for "java.lang.Character" and "char" by BeanWrapperImpl
* CustomCollectionEditor's/InputStreamEditor's "getAsText" returns null to indicate that there is no text representation
* added "getBeanNamesForType" method with "includePrototypes" and "includeFactoryBean" arguments to ListableBeanFactory
* deprecated ListableBeanFactory's "getBeanDefinitionNames(type)" method, in favor of "getBeanNamesForType"
* refined FieldRetrievingFactoryBean to trim passed-in "targetField" and "staticField" values, stripping off whitespace
* fixed ServiceLocatorFactoryBean to explicitly check for calls of java.lang.Object methods (for JRockit compatibility)
* added "serviceLocatorExceptionClass" property to ServiceLocatorFactoryBean, allowing for custom locator exceptions