@@ -10,9 +10,17 @@ Package org.springframework.beans
 * ConstructorArgumentValues holds generic ValueHolders in a List instead of a Set now, keeping their definition order
 * ConstructorArgumentValues offers "get(Generic)ArgumentValue" variant that excludes already used ValueHolders
 * AbstractAutowireCapableBeanFactory applies generic constructor argument values of the same type in definition order
+* BeanWrapperImpl registers CustomNumberEditors for all number types now including primitives
+
+Package org.springframework.jmx.support
+* Added WebLogicMBeanServerFactoryBean to allow for declarative access to the WebLogic MBeanServer
 
 Package org.springframework.web
 * WebContentGenerator sets "no-store" value for "Cache-Control" header too, to prevent caching on FireFox
+
+Package org.springframework.util
+* NumberUtils.parseNumber now trims Strings before attempting to parse them
+* NumberUtils now correctly supports operations on Byte
 
 
 Changes in version 1.2 RC2 (18.4.2005)
